dockerfile and docker-compose

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5432/pfdb
+    jdbc-url: jdbc:postgresql://postgres:5432/pfdb
     username: postgres
     password: barlova
     pool-size: 30
