--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,11 @@
 	</parent>
 	<groupId>com.muruw</groupId>
 	<artifactId>portfolio</artifactId>
+
 	<version>0.0.1-SNAPSHOT</version>
 	<name>portfolio</name>
-	<description>Backend for my portfolio website</description>
+	<description>Spring Boot back end for my portfolio</description>
+
 
 	<properties>
 		<java.version>11</java.version>
@@ -47,10 +49,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -58,6 +56,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<mainClass>com.muruw.portfolio.PortfolioApplication</mainClass>
+							<outputDirectory>${project.basedir}/docker</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
