--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=9000
